--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -1,22 +1,32 @@
-<!-- templates/add_book.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add New Book</title>
+    <title>Add a Book</title>
 </head>
 <body>
     <h1>Add a New Book</h1>
-    <form action="/add" method="POST">
+
+    <form action="{{ url_for('add_book') }}" method="POST">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required><br>
 
         <label for="author">Author:</label>
-        <input type="text" id="author" name="author" required><br>
+        <select id="author" name="author" required>
+            <option value="">Select an author</option>  <!-- Default option -->
+            {% for author in authors %}
+                <option value="{{ author.name }}">{{ author.name }}</option>
+            {% endfor %}
+        </select><br>
 
         <label for="genre">Genre:</label>
-        <input type="text" id="genre" name="genre"><br>
+        <select id="genre" name="genre" required>
+            <option value="">Select a genre</option>  <!-- Default option -->
+            {% for genre in genres %}
+                <option value="{{ genre.name }}">{{ genre.name }}</option>
+            {% endfor %}
+        </select><br>
 
         <label for="publication_date">Publication Date:</label>
         <input type="date" id="publication_date" name="publication_date"><br>
@@ -26,5 +36,7 @@
 
         <button type="submit">Add Book</button>
     </form>
+
+    <a href="{{ url_for('home') }}">Back to home</a>
 </body>
 </html>
