--- a/templates/edit_book.html
+++ b/templates/edit_book.html
@@ -1,4 +1,3 @@
-<!-- templates/edit_book.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,15 +7,24 @@
 </head>
 <body>
     <h1>Edit Book: {{ book.title }}</h1>
-    <form action="/edit/{{ book.id }}" method="POST">
+
+    <form action="{{ url_for('edit_book', id=book.id) }}" method="POST">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" value="{{ book.title }}" required><br>
 
         <label for="author">Author:</label>
-        <input type="text" id="author" name="author" value="{{ book.author }}" required><br>
+        <select id="author" name="author">
+            {% for author in authors %}
+                <option value="{{ author.name }}" {% if author.name == book.author.name %}selected{% endif %}>{{ author.name }}</option>
+            {% endfor %}
+        </select><br>
 
         <label for="genre">Genre:</label>
-        <input type="text" id="genre" name="genre" value="{{ book.genre }}"><br>
+        <select id="genre" name="genre">
+            {% for genre in genres %}
+                <option value="{{ genre.name }}" {% if genre.name == book.genre.name %}selected{% endif %}>{{ genre.name }}</option>
+            {% endfor %}
+        </select><br>
 
         <label for="publication_date">Publication Date:</label>
         <input type="date" id="publication_date" name="publication_date" value="{{ book.publication_date }}"><br>
@@ -24,7 +32,9 @@
         <label for="description">Description:</label>
         <textarea id="description" name="description">{{ book.description }}</textarea><br>
 
-        <button type="submit">Update Book</button>
+        <button type="submit">Save Changes</button>
     </form>
+
+    <a href="{{ url_for('home') }}">Back to home</a>
 </body>
 </html>
